# vessel

./: .gitignore  CHANGELOG.md  CLA.md  Cargo.toml  deny.toml  readme.md  readme_zh-hans.md  release-plz.toml
.cargo/: audit.toml  config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  refactor-request.md
.github/workflows/: README.md  ci.yml  cla.yml  deploy-docs.yml  release-plz.yml  release.yml  update-deps.yml
scripts/: lint_ignore.txt  tokei_check.sh
src/: cli.rs  component_host.rs  guest.rs  lib.rs  main.rs  output.rs  prelude.rs
tests/: component_build.rs
tests/fixtures/minimal_guest/: Cargo.toml
tests/fixtures/minimal_guest/src/: lib.rs
wit/: cauld-ron-build.wit  vessel-build.wit
