[package]
name = "vessel"
version = "0.1.0"
edition = "2024"
description = "WASM-driven RON build infrastructure for Bevy projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/vessel"
readme = "readme.md"
keywords = ["wasm", "ron", "build", "component-model"]
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
wasmtime = "44"
wasmtime-wasi = "44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.12"
souprune_schema = { path = "../souprune_schema" }
toml = "1.1"
chrono = "0.4"
