[package]
name = "cauld-ron"
version = "0.1.0"
edition = "2024"
description = "WASM-driven RON build infrastructure for Bevy projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/cauld-ron"
readme = "readme.md"
keywords = ["wasm", "ron", "build", "component-model"]
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
wasmtime = "44.0.1"
wasmtime-wasi = "44.0.1"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
chrono = "0.4"
