[package]
name = "cauld-ron"
version = "0.1.1"
edition = "2024"
description = "WASM-driven RON build infrastructure for Bevy projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/cauld-ron"
readme = "readme.md"
keywords = ["wasm", "ron", "build", "component-model"]
exclude = [
    ".cargo/",
    ".github/"
]

[dependencies]
anyhow = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "1.1", optional = true }
wasmtime = { version = "44.0.1", optional = true }
wasmtime-wasi = { version = "44.0.1", optional = true }
wit-bindgen = { version = "0.57", optional = true }

[features]
default = ["cli", "host"]
cli = ["dep:clap", "host"]
guest = ["dep:wit-bindgen"]
host = [
    "dep:anyhow",
    "dep:chrono",
    "dep:serde",
    "dep:toml",
    "dep:wasmtime",
    "dep:wasmtime-wasi",
]

[[bin]]
name = "cauld-ron"
path = "src/main.rs"
required-features = ["cli"]
